# nde-os

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  agent.toml  demo_app.py  dev.sh  run.bat  run.sh  status.md  test_out.json  test_theme.js
.agent-kanban/: memory.db
.agents/chat/: history.json
.agents/plans/: figma-json-render.md  performance-low-ram.md  status.md
.agents/rules/: anti-browser.md  app-manifest-spec.md  architecture.md  docs.md  implementation_plan.md  plugin-spec.md  roadmap.md
.agents/tasks/: build-a-sample-app.md  core-voice-services.md  fix-desktop-drag-context-menu.md  fix-screenshot.md  fix-state-loss.md  freecut-preview-zoom-bug.md  freecut.md  ldplayer-emulator-management.md  macos-features.md  mcp-gateway.md  movie-dub-core-integration.md  test.md  (+12 more)
.claude/: settings.local.json
cli/: Cargo.toml
cli/src/: chat.rs  main.rs  status.rs
core/: AGENTS.md  Cargo.toml
core/manifests/upload-folder-test/: app.py  manifest.json
core/scripts/: diarize.py
core/src/: lib.rs  secrets.rs
core/src/actor/: manifest.rs  mod.rs  runner.rs  storage.rs  template.rs
core/src/actor/sdk/: pyproject.toml
core/src/actor/sdk/nde_actor_sdk/: __init__.py  actor.py  browser.py  storage.py
core/src/agent/: config.rs  executor.rs  guardian.rs  heartbeat.rs  manager.rs  mod.rs  models.rs  protocol.rs  scheduler.rs  store.rs
core/src/app_manager/: mod.rs
core/src/channels/: gateway.rs  manager.rs  mod.rs  telegram.rs
core/src/downloader/: engine.rs  jobs.rs  mod.rs  provider.rs
core/src/downloader/providers/: mod.rs  short_drama.rs
core/src/events/: mod.rs
core/src/figma_json/: converter.rs  llm_prompt.rs  mod.rs  sample.json  style_resolver.rs  types.rs
core/src/freecut/: dubbing.rs  ffmpeg_bootstrap.rs  media_probe.rs  mod.rs  project.rs  render_engine.rs  storage.rs  vision.rs
core/src/freecut/movie_dub/: config.rs  lang.rs  merge.rs  mix.rs  mod.rs  pipeline.rs  segment.rs  split.rs  stt.rs  sync.rs
core/src/freecut/movie_dub/translate/: engine.rs  khmer.rs  lingva.rs  llm.rs  mod.rs  translator.rs
core/src/kfa/: alignment_utils.rs  audio.rs  g2p.rs  lexicon.rs  mod.rs  normalizer.rs  number_verbalize.rs  ort_runtime.rs  session.rs  srt.rs  text_normalize.rs  transcribe.rs  vocab.rs
core/src/knowledge/: mod.rs
core/src/llm/: anthropic.rs  codex_oauth.rs  gguf.rs  manager.rs  mod.rs  ollama.rs  openai_compat.rs  streaming.rs
core/src/manifest/: mod.rs
core/src/mcp/: builtin.rs  client.rs  kanban.rs  mod.rs  server.rs
core/src/media/: ffmpeg.rs  mod.rs
core/src/memory/: consolidation.rs  conversation.rs  knowledge.rs  kv.rs  migration.rs  mod.rs  semantic.rs  session.rs  structured.rs  substrate.rs  types.rs  usage.rs
core/src/node_env/: mod.rs
core/src/openviking/: client.rs  config.rs  mod.rs  process.rs
core/src/plugins/: engine.rs  hooks.rs  manifest.rs  mod.rs
core/src/sandbox/: mod.rs
core/src/screenshot/: capture.rs  mod.rs  ocr.rs
core/src/security/: audit.rs  injection.rs  metering.rs  mod.rs  policy.rs
core/src/services/: config.rs  mod.rs  registry.rs  types.rs
core/src/shield/: browser.rs  cdp.rs  emulator.rs  engine.rs  extension.rs  launcher.rs  ldplayer.rs  ldplayer_db.rs  mod.rs  profile.rs
core/src/skills/: mod.rs
core/src/system_metrics/: mod.rs
core/src/tests/: manager.rs  manifest.rs  mod.rs  sandbox.rs  store_upload.rs  system_metrics.rs  uv_env.rs
core/src/tools/: mod.rs
core/src/tools/builtin/: app_tools.rs  code_tools.rs  conversation_tools.rs  file_delete.rs  file_list.rs  file_patch.rs  file_read.rs  file_search.rs  file_write.rs  git_tools.rs  http_fetch.rs  kanban_tools.rs  knowledge_tools.rs  memory_tools.rs  mod.rs  screenshot.rs  shell_exec.rs  shield_browse.rs  skill_list.rs  system_info.rs  web_browse.rs  web_search.rs
core/src/translate/: google.rs  llm.rs  mod.rs  nde_agent.rs  srt.rs
core/src/uv_env/: mod.rs
core/src/voice/: mod.rs  runtime.rs  rvc.rs  tts.rs  types.rs
core/test_workspace/: .sandbox_info
core/tests/: integration_agent.rs  integration_shield.rs
desktop/: .gitignore  AGENTS.md  README.md  check.txt  components.json  dump.js  fix-components.ts  generate-renderers.js  generate-renderers.ts  index.html  out.json  out.txt  out2.json  out2.txt  out3.json  out3.txt  out5.txt  out6.txt  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pw_err.txt  pw_err2.txt  pw_err3.txt  pwout.txt  pwout2.txt  pwout3.txt  pwout4.txt  pwout5.txt  pwout6.txt  screenshot.html  svelte-out.txt  svelte_check_output.txt  svelte_check_output2.txt  test-wallpaper.mjs  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.agents/tasks/: e2e-test-counter-app.md  yrdy.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs  state.rs
desktop/src-tauri/src/commands/: agent_tasks.rs  apps.rs  catalog.rs  figma_json.rs  filesystem.rs  freecut.rs  git.rs  lifecycle.rs  memory.rs  mod.rs  pty.rs  sandbox.rs  screenshot.rs  service_hub.rs  settings.rs  shield.rs  system.rs  updater.rs  viking.rs  workspace.rs
docs/: PROJECT_BRAIN.md  future-plan.md  implementation_plan.md  implementation_plan_codex.md  r&d-agent-looping.md
scratch/: test_llm.rs
scripts/: install-biome.sh
server/: AGENTS.md  Cargo.toml  run.bat  run.sh
server/src/: agent_handler.rs  config.rs  handlers.rs  main.rs  model_handler.rs  openapi.rs  plugin_handler.rs  response.rs  router.rs  stream_handler.rs  subsystem_handler.rs  telegram_gateway.rs
server/src/actors/: mod.rs
server/src/agent/: handler.rs  mod.rs  stream.rs
server/src/apps/: mod.rs
server/src/gateway/: commands.rs  log.rs  mod.rs  session.rs  telegram.rs
server/src/kanban/: mod.rs
server/src/models/: mod.rs
server/src/openapi/: agent.rs  apps.rs  catalog.rs  kfa.rs  memory.rs  mod.rs  sandbox.rs  schemas.rs  system.rs  translate.rs  viking.rs  whisper.rs
server/src/plugins/: mod.rs
server/src/subsystems/: downloads.rs  freecut.rs  kfa.rs  memory.rs  mod.rs  translate.rs  whisper.rs
src/: main.rs
(+257 files in other folders)
