[package]
name = "ai_launcher"
version = "0.2.0"
edition = "2021"
description = "Cross-platform AI App Launcher with filesystem sandboxing (Linux + Windows)"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.81"
chrono = "0.4.35"
tiny_http = "0.12"
