[package]
name = "nde-cli"
version = "0.2.0"
edition = "2021"
description = "NDE-OS command-line interface"

[[bin]]
name = "nde"
path = "src/main.rs"

[dependencies]
ai-launcher-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.81"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
colored = "2"
