[package]
name = "nde-cli"
version = "0.3.0"
edition = "2021"
description = "NDE-OS command-line interface"

[[bin]]
name = "nde"
path = "src/main.rs"

[dependencies]
ai-launcher-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
futures = "0.3"
colored = "3"
