[package]
name = "ai-launcher-core"
version = "0.2.0"
edition = "2021"
description = "Shared core library: sandbox, uv_env, app_manager, manifest, agent, LLM, plugins, MCP"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
sysinfo = { version = "0.30.13", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "io-std"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
glob = "0.3"
tracing = "0.1"
futures = "0.3"
# Phase 2 additions
tokio-stream = "0.1"
async-stream = "0.3"
pin-project-lite = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
