[package]
name = "ai-launcher-core"
version = "0.2.0"
edition = "2021"
description = "Shared core library: sandbox, uv_env, app_manager, manifest, agent, LLM, plugins, MCP"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
sysinfo = { version = "0.30.13", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "io-std"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
glob = "0.3"
tracing = "0.1"
futures = "0.3"
# Phase 2 additions
tokio-stream = "0.1"
tokio-util = "0.7"
async-stream = "0.3"
pin-project-lite = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
rand = "0.8"
urlencoding = "2"
# Shield Browser (anti-detect)
tar = "0.4"
bzip2 = "0.5"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

[features]
default = ["screenshot"]
screenshot = ["xcap", "image", "base64", "windows"]

[dependencies.xcap]
version = "0.3.3"
optional = true

[dependencies.image]
version = "0.25.1"
optional = true

[dependencies.base64]
version = "0.22"
optional = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Globalization", "Graphics_Imaging", "Media_Ocr", "Storage_Streams", "Foundation"], optional = true }
