[package]
name = "ai-launcher-core"
version = "0.3.0"
edition = "2021"
description = "Shared core library: sandbox, uv_env, app_manager, manifest, agent, LLM, plugins, MCP"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = { version = "0.38", default-features = false, features = ["system", "disk"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "io-std"] }
reqwest = { version = "0.13", features = ["json", "stream", "blocking", "form"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
sha2 = "0.11"
aes-gcm = "0.10"
glob = "0.3"
tracing = "0.1"
futures = "0.3"
# Phase 2 additions
tokio-stream = "0.1"
tokio-util = "0.7"
async-stream = "0.3"
pin-project-lite = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
rand = "0.10"
urlencoding = "2"
# Shield Browser (anti-detect)
tar = "0.4"
bzip2 = "0.6"
flate2 = "1"
# Movie dub WAV I/O
hound = "3.5"
# Khmer Forced Aligner (KFA) dependencies
rustfst = "1.2.6"
crfs = "0.2.0"
ndarray = "0.16"
khmercut = "0.1.5"
fancy-regex = "0.14"
unicode-normalization = "0.1"
dirs = "5"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "api-17"] }
once_cell = "1"
regex = "1"
rmp-serde = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
dirs = "6"
tracing-subscriber = "0.3"

[features]
default = ["screenshot"]
screenshot = ["xcap", "image", "base64", "windows"]

[dependencies.xcap]
version = "0.3.3"
optional = true

[dependencies.image]
version = "0.25.1"
optional = true

[dependencies.base64]
version = "0.22"
optional = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Globalization", "Graphics_Imaging", "Media_Ocr", "Storage_Streams", "Foundation"], optional = true }
