[package]
name = "ai-launcher-server"
version = "0.2.0"
edition = "2021"
description = "HTTP server for AI Launcher (tiny_http)"

[dependencies]
ai-launcher-core = { path = "../core" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.81"
chrono = "0.4.35"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
urlencoding = "2"
