[package]
name = "ai-launcher-desktop"
version = "0.2.0"
edition = "2021"
description = "AI Launcher Desktop — Tauri 2"

[lib]
name = "ai_launcher_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
ai-launcher-core = { path = "../../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.81"
chrono = "0.4.35"
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
open = "5"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["sync"] }
portable-pty = "0.9.0"
notify = "6.1.1"
