[package]
name = "ai-launcher-desktop"
version = "0.3.0"
edition = "2021"
description = "AI Launcher Desktop — Tauri 2"

[lib]
name = "ai_launcher_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
ai-launcher-core = { path = "../../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
open = "5"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["sync"] }
portable-pty = "0.9.0"
notify = "8"
reqwest = { version = "0.13", features = ["stream"] }
futures-util = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

