[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nde-actor-sdk"
version = "0.1.0"
description = "Dual-runtime actor SDK for NDE-OS Shield Browser and Apify"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
dependencies = [
    "playwright>=1.40",
]

[project.optional-dependencies]
apify = ["apify>=1.6"]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
include = ["nde_actor_sdk*"]
